# continent

./: .gitignore  Cargo.toml  README.md  build.rs  compile.py  languages.py  launcher.py  magic.py  main.py  names.py  sim.py  sim_old.py  sim_template.py
csv/: animal.csv  gemstone.csv  magic.csv  metal.csv  monster.csv  name.csv  plant.csv
json_data/: default.json  mini.json  tiny.json
markov/: animal.markov  gemstone.markov  magic.markov  metal.markov  monster.markov  name.markov  plant.markov
objects/: default_items.txt  diminished_items.txt  simple_items.txt
src/: jsonize.rs  lib.rs  magic.rs  main.rs  mkv.rs  report.rs  sim.rs  worldgen.rs
src/sim/: city.rs  item.rs  logging.rs  world.rs
templates/: map.html  report.html
