[package]
name = "continent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
shuffle = "0.1.7"
json = "0.12.4"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
csv = "1.2.1"

[build-dependencies]
rand = "0.8.5"